2004-09-11  Matthias Neeracher  <neeracher@mac.com>

	* scm/framework-ps.scm (reencode-font): Handling font scaling
	and reencoding differently to work around a bug in gs 8.30 and
	earlier.
	Update callers.

2004-09-11  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/slur-scoring.cc (broken_trend_y): always take use vdir
	extent index of other system. Fixes slurs across line breaks.

	* lily/tuplet-engraver.cc (start_translation_timestep): use
	Tuplet_description::stop_ for determining when to stop producing
	tuplet brackets. This fixes: tuplet-overwrite.ly

	* lily/*-engraver.cc: remove all Protected_scm objects to fix GC
	errors with GUILE 1.7 CVS.

	* lily/translator.cc (derived_mark): new function.

	* lily/slur-scoring.cc (score_encompass): new penalty type:
	variance penalty demerits slurs where one head/stem is much
	closer to the slur than average.

	* lily/tuplet-bracket.cc (print): use robust_relative_extent
	iso. extent()
	(calc_position_and_height): use robust_relative_extent(). This
	fixes a couple of programming_errors

	* input/regression/part-combine-mmrest-after-solo.ly (Module): new
	file.

	* lily/part-combine-iterator.cc (unisono): bugfix for the case
	that voice-2 plays solo, and voice-1 has an mmrest that starts
	earlier. In that case, we switch to voice-2, so we catch the
	mmrest of voice-2. This fixes: partcombine-rest.ly.
 
2004-09-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/define-grob-properties.scm (all-internal-grob-properties):
	add adjacent-hairpins property.

	* lily/hairpin.cc: lengthen hairpin if space is available.

	* input/regression/dynamics-hairpin-length.ly (Module): new file.

2004-09-10  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/notation.itely: small fixes to docs.

2004-09-10  Han-Wen Nienhuys   <hanwen@xs4all.nl>
	
	* VERSION (PACKAGE_NAME): release 2.3.15

	* make/lilypond.redhat.spec.in (Requires): bump requirement for
	ec-fonts-mftraced
